test/test-files/analyzer/for-loops/error-for-condition-bool/exception.out
Semantic error in : ./test-files/analyzer/for-loops/error-for-condition-bool/source.spice:2:20:
Condition must be bool: For loop condition must be of type bool

for int i = 0; "No bool"; i++ {
               ^^^^^^^^^